# reed-solomon-erasure.wasm

./: .gitignore  Cargo.toml  package-lock.json  package.json  readme.md  test.ts  tsconfig.json
src/: index.ts  lib.rs  reed_solomon_erasure_bg.wasm
tests/: basic.ts
