[package]
name = "reed-solomon-erasure"
version = "0.2.3"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
description = "Rust implementation of read-solomon erasure-coding compiled to Web Assembly"
repository = "git://github.com/subspace/reed-solomon-erasure.wasm.git"
license = "MIT"

[dependencies]
reed-solomon-erasure = { version = "3.1.1", features = ["pure-rust"] }
wasm-bindgen = "0.2"
wee_alloc = "0.4.4"

[replace]
"reed-solomon-erasure:3.1.1" = { git = "https://github.com/subspace/reed-solomon-erasure", branch = "remove-rayon", features = ["pure-rust"] }

[lib]
crate-type = ["cdylib"]

[features]
default = []
